# televoodoo-viewer

./: .gitignore  .gitmodules  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
SPECS/: APP_SPECS.md  BLUETOOTH_API_DOCUMENTATION.md  INPUT_POSE_DATA_FORMAT.md  QR_CODE_READING_GUIDE.md
python/: README.md  pyproject.toml  requirements.txt
python/examples/output_poller/: README.md  output_poller.py  voodoo_settings.json  voodoo_settings2.json
python/examples/pose_frequency/: README.md  pose_frequency.py
python/examples/pose_logger/: README.md  pose_logger.py
python/voodoo_core/: __init__.py  __main__.py  ble.py  ble_peripheral_macos.py  ble_peripheral_ubuntu.py  pose.py  transform.py
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: prepare-tauri.js
src-tauri/src/: main.rs
src/components/: ConnectionConfig.svelte  OutputConfig.svelte  PoseValues.svelte  Qr.svelte  Scene3D.svelte
src/lib/: backend.ts  log.ts  store.ts  transform.ts  types.ts
