[package]
name = "voodoo-control-receiver"
version = "0.1.0"
description = "Voodoo Control Receiver"
authors = ["Daniel"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["wry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"


