[package]
name = "televoodoo-viewer"
version = "0.1.0"
description = "Televoodoo Viewer"
authors = ["Daniel Hammer <hello@mana-robotics.com>"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"


